--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
                 width: 350px;
             }
             .wrap {
+                padding-top: 120px;
                 width: 500px;
                 margin: auto;
             }
@@ -16,7 +17,7 @@
     </head>
     <body>
         <div class="wrap">
-            Address:<input type="text" id="autocomplete" />
+            Address <input type="text" id="autocomplete" />
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
